Bug 252324 - ARM64: Very early panic on build from 01.01.2021 (Duplicate alloc of zone)
Summary: ARM64: Very early panic on build from 01.01.2021 (Duplicate alloc of zone)
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: arm (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Many People
Assignee: Michal Meloun
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-01 12:20 UTC by Gordon Bergling
Modified: 2021-01-02 20:42 UTC (History)
2 users (show)

See Also:


Attachments
arm64 RPi4 kernel panic (974.93 KB, image/jpeg)
2021-01-01 12:21 UTC, Gordon Bergling
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gordon Bergling freebsd_committer 2021-01-01 12:20:23 UTC
I tried a build from today on the RPi4 (ARM64) and the system panics very early after the kernel is loaded and the Copyright is printed. I only have a screenshot of the panic.
Comment 1 Gordon Bergling freebsd_committer 2021-01-01 12:21:28 UTC
Created attachment 221159 [details]
arm64 RPi4 kernel panic
Comment 2 Michal Meloun freebsd_committer 2021-01-02 09:44:14 UTC
Please see https://reviews.freebsd.org/D27886.
Comment 3 commit-hook freebsd_committer 2021-01-02 20:13:52 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=82661227eddfd22e660bad7cd5f1adbb7c691b48

commit 82661227eddfd22e660bad7cd5f1adbb7c691b48
Author:     Ryan Libby <rlibby@FreeBSD.org>
AuthorDate: 2021-01-02 20:11:18 +0000
Commit:     Ryan Libby <rlibby@FreeBSD.org>
CommitDate: 2021-01-02 20:13:25 +0000

    arm64: fix mask in atomic_testand{set,clear}_64

    These macros generate both the 32- and 64-bit ops, but the mask was hard
    coded for 32-bit ops, causing the 64-bit ops always to affect only the
    low 32 bits.

    PR:             252324
    Reported by:    gbe, mmel
    Reviewed by:    markj, mmel
    Tested by:      mmel, rwatson
    Sponsored by:   Dell EMC Isilon
    Differential Revision:  https://reviews.freebsd.org/D27886

 sys/arm64/include/atomic.h | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Comment 4 Michal Meloun freebsd_committer 2021-01-02 20:42:10 UTC
Fix verified.